{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 48,
  "lineage": "665e104a-9ed4-772b-752c-bceab8eb4bf3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251718860:internet-gateway/igw-0e788681595030a7e",
            "id": "igw-0e788681595030a7e",
            "owner_id": "650251718860",
            "region": "us-east-1",
            "tags_all": {
              "Managed_by": "Terraform",
              "Project": "react-go-application"
            },
            "vpc_id": "vpc-0a0da6474aebf99a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "650251718860",
            "id": "igw-0e788681595030a7e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:650251718860:loadbalancer/app/ecs-alb/31169cee7054988a",
            "arn_suffix": "app/ecs-alb/31169cee7054988a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-945945899.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:650251718860:loadbalancer/app/ecs-alb/31169cee7054988a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0e6bcebba0ab5aae7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-076af87898eb8a405"
              },
              {
                "subnet_id": "subnet-0baf3da6054c7fb36"
              }
            ],
            "subnets": [
              "subnet-076af87898eb8a405",
              "subnet-0baf3da6054c7fb36"
            ],
            "tags": {
              "Name": "ecs-alb"
            },
            "tags_all": {
              "Managed_by": "Terraform",
              "Name": "ecs-alb",
              "Project": "react-go-application"
            },
            "vpc_id": "vpc-0a0da6474aebf99a8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:650251718860:loadbalancer/app/ecs-alb/31169cee7054988a"
          },
          "dependencies": [
            "aws_security_group.ecs-sg",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:650251718860:listener/app/ecs-alb/31169cee7054988a/c9ad115393316b73",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:650251718860:targetgroup/ecs-target-group/2a42e12c431c683e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:650251718860:listener/app/ecs-alb/31169cee7054988a/c9ad115393316b73",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:650251718860:loadbalancer/app/ecs-alb/31169cee7054988a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Managed_by": "Terraform",
              "Project": "react-go-application"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:650251718860:listener/app/ecs-alb/31169cee7054988a/c9ad115393316b73"
          },
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.ecs_tg",
            "aws_security_group.ecs-sg",
            "aws_subnet.subnet-1",
            "aws_subnet.subnet-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:650251718860:targetgroup/ecs-target-group/2a42e12c431c683e",
            "arn_suffix": "targetgroup/ecs-target-group/2a42e12c431c683e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,404",
                "path": "/api/todos",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:650251718860:targetgroup/ecs-target-group/2a42e12c431c683e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:650251718860:loadbalancer/app/ecs-alb/31169cee7054988a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Managed_by": "Terraform",
              "Project": "react-go-application"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a0da6474aebf99a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:650251718860:targetgroup/ecs-target-group/2a42e12c431c683e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251718860:route-table/rtb-01dbda97ee04ac326",
            "id": "rtb-01dbda97ee04ac326",
            "owner_id": "650251718860",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e788681595030a7e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Managed_by": "Terraform",
              "Project": "react-go-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0da6474aebf99a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "650251718860",
            "id": "rtb-01dbda97ee04ac326",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet1-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050d8ed94be11a38f",
            "region": "us-east-1",
            "route_table_id": "rtb-01dbda97ee04ac326",
            "subnet_id": "subnet-076af87898eb8a405"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "650251718860",
            "id": "rtbassoc-050d8ed94be11a38f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt-main",
            "aws_subnet.subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet2-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aebcbb286728ff15",
            "region": "us-east-1",
            "route_table_id": "rtb-01dbda97ee04ac326",
            "subnet_id": "subnet-0baf3da6054c7fb36"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "650251718860",
            "id": "rtbassoc-0aebcbb286728ff15",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt-main",
            "aws_subnet.subnet-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docdb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251718860:security-group/sg-0a74f276470058a9c",
            "description": "Allow inbound MongoDB traffic from ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a74f276470058a9c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MongoDB connection from ECS",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e6bcebba0ab5aae7"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "docdb-security-group",
            "name_prefix": "",
            "owner_id": "650251718860",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Managed_by": "Terraform",
              "Project": "react-go-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0da6474aebf99a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "650251718860",
            "id": "sg-0a74f276470058a9c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ecs-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251718860:security-group/sg-0e6bcebba0ab5aae7",
            "description": "Security group for ECS tasks and ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6bcebba0ab5aae7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow all internal communication within SG",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "ecs-security-group",
            "name_prefix": "",
            "owner_id": "650251718860",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Managed_by": "Terraform",
              "Project": "react-go-application"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0da6474aebf99a8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "650251718860",
            "id": "sg-0e6bcebba0ab5aae7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251718860:subnet/subnet-076af87898eb8a405",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-076af87898eb8a405",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "650251718860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-subnet-1"
            },
            "tags_all": {
              "Managed_by": "Terraform",
              "Name": "ecs-subnet-1",
              "Project": "react-go-application"
            },
            "vpc_id": "vpc-0a0da6474aebf99a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "650251718860",
            "id": "subnet-076af87898eb8a405",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251718860:subnet/subnet-0baf3da6054c7fb36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baf3da6054c7fb36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "650251718860",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ecs-subnet-2"
            },
            "tags_all": {
              "Managed_by": "Terraform",
              "Name": "ecs-subnet-2",
              "Project": "react-go-application"
            },
            "vpc_id": "vpc-0a0da6474aebf99a8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "650251718860",
            "id": "subnet-0baf3da6054c7fb36",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:650251718860:vpc/vpc-0a0da6474aebf99a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-028df7faabc827e90",
            "default_route_table_id": "rtb-057e8764dd479b540",
            "default_security_group_id": "sg-04e20f7519ef1ca5d",
            "dhcp_options_id": "dopt-0dea503f6ffebc322",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a0da6474aebf99a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057e8764dd479b540",
            "owner_id": "650251718860",
            "region": "us-east-1",
            "tags_all": {
              "Managed_by": "Terraform",
              "Project": "react-go-application"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "650251718860",
            "id": "vpc-0a0da6474aebf99a8",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}